update gitignore for 017

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,15 @@ reports/017/per_species.zip
 reports/017/iNaturalist_Competition/
 
 reports/017/per_species/
+
+.bash_history
+
+agile-reproducibility-reviews.html
+
+reports/017/MicrosoftSpeciesClassification/
+
+reports/017/RequestCollectionComputerVisionAPIs/
+
+reports/017/images_per_model/
+
+reports/017/images_per_model.zip
