--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ reports/017/RequestCollectionComputerVisionAPIs/
 reports/017/images_per_model/
 
 reports/017/images_per_model.zip
+
+reports/019/PretrainedModel.zip
+
+reports/019/Geoparsing-Solved-Or-Biased/
