--- a/.dockerignore
+++ b/.dockerignore
@@ -50,3 +50,11 @@ agile-reproducibility-reviews.html
 reports/017/MicrosoftSpeciesClassification/
 
 reports/017/RequestCollectionComputerVisionAPIs/
+
+reports/017/images_per_model/
+
+reports/017/images_per_model.zip
+
+reports/019/PretrainedModel.zip
+
+reports/019/Geoparsing-Solved-Or-Biased/
