--- a/reports/011/codecheck.yml
+++ b/reports/011/codecheck.yml
@@ -6,21 +6,27 @@ manifest:
     comment: "The AGILE 2022 Reproducibility Review did not include manifest documentation, see https://github.com/codecheckers/register/issues/38"
 
 paper:
-  title: "<paper title here>"
+  title: "Traffic Regulation Recognition using Crowd-Sensed GPS and Map Data: a Hybrid Approach"
   authors:
-    - name: <first name last name author one>
-      ORCID: <ORCID one>
-    - name: <first last name author et al.>
-      ORCID: <ORCID et al.>
-  reference: https://doi.org/10.5194/agile-giss-3-...
+    - name: Stefania Zourlidou
+      ORCID: 0000-0003-1759-7379
+    - name: Jens Golze
+      ORCID: 0000-0001-7355-351X
+    - name: Monika Sester
+      ORCID: 0000-0002-6656-8809
+  reference: https://doi.org/10.5194/agile-giss-3-22-2022
 
 codechecker:
-  - name: <name>
-    ORCID: <ORCID>
+  - name: Eftychia Koukouraki
+    ORCID: 0000-0003-0928-1139
 
-report: https://doi.org/10.17605/osf.io/...
+report: https://doi.org/10.17605/osf.io/wncsm
 summary: |
-    ...
-repository: https://...
+    The paper compares several models for traffic control recognition at junctions, which are built upon Random Forest and Gradient Boosting classifiers.
+    The analysis makes use of 2 datasets, which correspond to the cities of Chicago and Hannover.
+    The authors agreed to share confidentially all their materials (data and code) with the Reproducibility Committee for the needs of the review.
+    For the needs of this review, we reproduced all the Tables and Figures of 'Section 5 - Results' and of the Appendix.
+    The reproduced results were in accordance with the final uploaded version of the manuscript.
+    Therefore, the reproduction of the paper is considered successful.
 check_time: "2022-07-09 12:00:00"
-certificate: 2022-xxx
+certificate: 2022-017
