--- a/reports/024/codecheck.yml
+++ b/reports/024/codecheck.yml
@@ -9,7 +9,7 @@ paper:
   title: "Understanding the Imperfection of 3D point Cloud and Semantic Segmentation algorithms for 3D Models of Indoor Environment"
   authors:
     - name: Guoray Cai orcid 1 and 
-      ORCID: /0000-0002-5189-8442
+      ORCID: 0000-0002-5189-8442
     - name: Yimu Pan
   reference: https://doi.org/10.5194/agile-giss-3-2-2022
 
